src/antlr/LuaParser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import LuaListener from './LuaListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class LuaParser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, "';'", "'='", "'break'", "'goto'", "'do'", 
                            "'end'", "'while'", "'repeat'", "'until'", "'if'", 
                            "'then'", "'elseif'", "'else'", "'for'", "','", 
                            "'in'", "'function'", "'local'", "'return'", 
                            "'continue'", "'::'", "'.'", "':'", "'nil'", 
                            "'false'", "'true'", "'...'", "'('", "')'", 
                            "'['", "']'", "'{'", "'}'", "'or'", "'and'", 
                            "'<'", "'>'", "'<='", "'>='", "'~='", "'=='", 
                            "'..'", "'+'", "'-'", "'*'", "'/'", "'%'", "'//'", 
                            "'&'", "'|'", "'~'", "'<<'", "'>>'", "'not'", 
                            "'#'", "'^'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, "NAME", "NORMALSTRING", "CHARSTRING", 
                             "LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT", 
                             "COMMENT", "LINE_COMMENT", "WS", "SHEBANG" ];
    static ruleNames = [ "chunk", "block", "stat", "laststat", "label", 
                         "funcname", "varlist", "namelist", "explist", "exp", 
                         "prefixexp", "functioncall", "varOrExp", "var", 
                         "varSuffix", "nameAndArgs", "args", "functiondef", 
                         "funcbody", "parlist", "tableconstructor", "fieldlist", 
                         "field", "fieldsep", "operatorOr", "operatorAnd", 
                         "operatorComparison", "operatorStrcat", "operatorAddSub", 
                         "operatorMulDivMod", "operatorBitwise", "operatorUnary", 
                         "operatorPower", "number", "string" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = LuaParser.ruleNames;
        this.literalNames = LuaParser.literalNames;
        this.symbolicNames = LuaParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 9:
    	    		return this.exp_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    exp_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 9);
    		case 1:
    			return this.precpred(this._ctx, 7);
    		case 2:
    			return this.precpred(this._ctx, 6);
    		case 3:
    			return this.precpred(this._ctx, 5);
    		case 4:
    			return this.precpred(this._ctx, 4);
    		case 5:
    			return this.precpred(this._ctx, 3);
    		case 6:
    			return this.precpred(this._ctx, 2);
    		case 7:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	chunk() {
	    let localctx = new ChunkContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, LuaParser.RULE_chunk);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 70;
	        this.block();
	        this.state = 71;
	        this.match(LuaParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, LuaParser.RULE_block);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 76;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 73;
	                this.stat(); 
	            }
	            this.state = 78;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
	        }

	        this.state = 80;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & 1572872) !== 0)) {
	            this.state = 79;
	            this.laststat();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stat() {
	    let localctx = new StatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, LuaParser.RULE_stat);
	    var _la = 0; // Token type
	    try {
	        this.state = 163;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new SemiContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 82;
	            this.match(LuaParser.T__0);
	            break;

	        case 2:
	            localctx = new StatAssignmentContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 83;
	            this.varlist();
	            this.state = 84;
	            this.match(LuaParser.T__1);
	            this.state = 85;
	            this.explist();
	            break;

	        case 3:
	            localctx = new FunccallContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 87;
	            this.functioncall();
	            break;

	        case 4:
	            localctx = new StatLabelContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 88;
	            this.label();
	            break;

	        case 5:
	            localctx = new StatBreakContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 89;
	            this.match(LuaParser.T__2);
	            break;

	        case 6:
	            localctx = new StatGotoContext(this, localctx);
	            this.enterOuterAlt(localctx, 6);
	            this.state = 90;
	            this.match(LuaParser.T__3);
	            this.state = 91;
	            this.match(LuaParser.NAME);
	            break;

	        case 7:
	            localctx = new StatDoContext(this, localctx);
	            this.enterOuterAlt(localctx, 7);
	            this.state = 92;
	            this.match(LuaParser.T__4);
	            this.state = 93;
	            this.block();
	            this.state = 94;
	            this.match(LuaParser.T__5);
	            break;

	        case 8:
	            localctx = new StatWhileContext(this, localctx);
	            this.enterOuterAlt(localctx, 8);
	            this.state = 96;
	            this.match(LuaParser.T__6);
	            this.state = 97;
	            this.exp(0);
	            this.state = 98;
	            this.match(LuaParser.T__4);
	            this.state = 99;
	            this.block();
	            this.state = 100;
	            this.match(LuaParser.T__5);
	            break;

	        case 9:
	            localctx = new StatRepeatContext(this, localctx);
	            this.enterOuterAlt(localctx, 9);
	            this.state = 102;
	            this.match(LuaParser.T__7);
	            this.state = 103;
	            this.block();
	            this.state = 104;
	            this.match(LuaParser.T__8);
	            this.state = 105;
	            this.exp(0);
	            break;

	        case 10:
	            localctx = new StatIfContext(this, localctx);
	            this.enterOuterAlt(localctx, 10);
	            this.state = 107;
	            this.match(LuaParser.T__9);
	            this.state = 108;
	            this.exp(0);
	            this.state = 109;
	            this.match(LuaParser.T__10);
	            this.state = 110;
	            this.block();
	            this.state = 118;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===12) {
	                this.state = 111;
	                this.match(LuaParser.T__11);
	                this.state = 112;
	                this.exp(0);
	                this.state = 113;
	                this.match(LuaParser.T__10);
	                this.state = 114;
	                this.block();
	                this.state = 120;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 123;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===13) {
	                this.state = 121;
	                this.match(LuaParser.T__12);
	                this.state = 122;
	                this.block();
	            }

	            this.state = 125;
	            this.match(LuaParser.T__5);
	            break;

	        case 11:
	            localctx = new StatNumericForContext(this, localctx);
	            this.enterOuterAlt(localctx, 11);
	            this.state = 127;
	            this.match(LuaParser.T__13);
	            this.state = 128;
	            this.match(LuaParser.NAME);
	            this.state = 129;
	            this.match(LuaParser.T__1);
	            this.state = 130;
	            this.exp(0);
	            this.state = 131;
	            this.match(LuaParser.T__14);
	            this.state = 132;
	            this.exp(0);
	            this.state = 135;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===15) {
	                this.state = 133;
	                this.match(LuaParser.T__14);
	                this.state = 134;
	                this.exp(0);
	            }

	            this.state = 137;
	            this.match(LuaParser.T__4);
	            this.state = 138;
	            this.block();
	            this.state = 139;
	            this.match(LuaParser.T__5);
	            break;

	        case 12:
	            localctx = new StatGenericForContext(this, localctx);
	            this.enterOuterAlt(localctx, 12);
	            this.state = 141;
	            this.match(LuaParser.T__13);
	            this.state = 142;
	            this.namelist();
	            this.state = 143;
	            this.match(LuaParser.T__15);
	            this.state = 144;
	            this.explist();
	            this.state = 145;
	            this.match(LuaParser.T__4);
	            this.state = 146;
	            this.block();
	            this.state = 147;
	            this.match(LuaParser.T__5);
	            break;

	        case 13:
	            localctx = new StatFuncDeclarationContext(this, localctx);
	            this.enterOuterAlt(localctx, 13);
	            this.state = 149;
	            this.match(LuaParser.T__16);
	            this.state = 150;
	            this.funcname();
	            this.state = 151;
	            this.funcbody();
	            break;

	        case 14:
	            localctx = new StatLocalfuncDeclarationContext(this, localctx);
	            this.enterOuterAlt(localctx, 14);
	            this.state = 153;
	            this.match(LuaParser.T__17);
	            this.state = 154;
	            this.match(LuaParser.T__16);
	            this.state = 155;
	            this.match(LuaParser.NAME);
	            this.state = 156;
	            this.funcbody();
	            break;

	        case 15:
	            localctx = new StatLocalAssignmentContext(this, localctx);
	            this.enterOuterAlt(localctx, 15);
	            this.state = 157;
	            this.match(LuaParser.T__17);
	            this.state = 158;
	            this.namelist();
	            this.state = 161;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===2) {
	                this.state = 159;
	                this.match(LuaParser.T__1);
	                this.state = 160;
	                this.explist();
	            }

	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	laststat() {
	    let localctx = new LaststatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, LuaParser.RULE_laststat);
	    var _la = 0; // Token type
	    try {
	        this.state = 174;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 19:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 165;
	            this.match(LuaParser.T__18);
	            this.state = 167;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 17)) & ~0x1f) == 0 && ((1 << (_la - 17)) & 134254465) !== 0) || ((((_la - 51)) & ~0x1f) == 0 && ((1 << (_la - 51)) & 16345) !== 0)) {
	                this.state = 166;
	                this.explist();
	            }

	            break;
	        case 3:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 169;
	            this.match(LuaParser.T__2);
	            break;
	        case 20:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 170;
	            this.match(LuaParser.T__19);
	            this.state = 172;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===1) {
	                this.state = 171;
	                this.match(LuaParser.T__0);
	            }

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	label() {
	    let localctx = new LabelContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, LuaParser.RULE_label);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 176;
	        this.match(LuaParser.T__20);
	        this.state = 177;
	        this.match(LuaParser.NAME);
	        this.state = 178;
	        this.match(LuaParser.T__20);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcname() {
	    let localctx = new FuncnameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, LuaParser.RULE_funcname);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 180;
	        this.match(LuaParser.NAME);
	        this.state = 185;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===22) {
	            this.state = 181;
	            this.match(LuaParser.T__21);
	            this.state = 182;
	            this.match(LuaParser.NAME);
	            this.state = 187;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 190;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===23) {
	            this.state = 188;
	            this.match(LuaParser.T__22);
	            this.state = 189;
	            this.match(LuaParser.NAME);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varlist() {
	    let localctx = new VarlistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, LuaParser.RULE_varlist);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 192;
	        this.var_();
	        this.state = 197;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===15) {
	            this.state = 193;
	            this.match(LuaParser.T__14);
	            this.state = 194;
	            this.var_();
	            this.state = 199;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	namelist() {
	    let localctx = new NamelistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, LuaParser.RULE_namelist);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 200;
	        this.match(LuaParser.NAME);
	        this.state = 205;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 201;
	                this.match(LuaParser.T__14);
	                this.state = 202;
	                this.match(LuaParser.NAME); 
	            }
	            this.state = 207;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	explist() {
	    let localctx = new ExplistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, LuaParser.RULE_explist);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 213;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,14,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 208;
	                this.exp(0);
	                this.state = 209;
	                this.match(LuaParser.T__14); 
	            }
	            this.state = 215;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,14,this._ctx);
	        }

	        this.state = 216;
	        this.exp(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	exp(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExpContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 18;
	    this.enterRecursionRule(localctx, 18, LuaParser.RULE_exp, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 231;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 24:
	            localctx = new ExpNilContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 219;
	            this.match(LuaParser.T__23);
	            break;
	        case 25:
	            localctx = new ExpFalseContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 220;
	            this.match(LuaParser.T__24);
	            break;
	        case 26:
	            localctx = new ExpTrueContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 221;
	            this.match(LuaParser.T__25);
	            break;
	        case 61:
	        case 62:
	        case 63:
	        case 64:
	            localctx = new ExpNumberContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 222;
	            this.number();
	            break;
	        case 58:
	        case 59:
	        case 60:
	            localctx = new ExpStringContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 223;
	            this.string();
	            break;
	        case 27:
	            localctx = new ExpVariadicContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 224;
	            this.match(LuaParser.T__26);
	            break;
	        case 17:
	            localctx = new ExpFuncDefContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 225;
	            this.functiondef();
	            break;
	        case 28:
	        case 57:
	            localctx = new ExpPrefixExpContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 226;
	            this.prefixexp();
	            break;
	        case 32:
	            localctx = new ExpTableCtorContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 227;
	            this.tableconstructor();
	            break;
	        case 44:
	        case 51:
	        case 54:
	        case 55:
	            localctx = new ExpUnaryContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 228;
	            this.operatorUnary();
	            this.state = 229;
	            this.exp(8);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 267;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,17,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 265;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new ExpPowerContext(this, new ExpContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, LuaParser.RULE_exp);
	                    this.state = 233;
	                    if (!( this.precpred(this._ctx, 9))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
	                    }
	                    this.state = 234;
	                    this.operatorPower();
	                    this.state = 235;
	                    this.exp(9);
	                    break;

	                case 2:
	                    localctx = new ExpMulDivModContext(this, new ExpContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, LuaParser.RULE_exp);
	                    this.state = 237;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 238;
	                    this.operatorMulDivMod();
	                    this.state = 239;
	                    this.exp(8);
	                    break;

	                case 3:
	                    localctx = new ExpAddSubContext(this, new ExpContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, LuaParser.RULE_exp);
	                    this.state = 241;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 242;
	                    this.operatorAddSub();
	                    this.state = 243;
	                    this.exp(7);
	                    break;

	                case 4:
	                    localctx = new ExpConcatContext(this, new ExpContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, LuaParser.RULE_exp);
	                    this.state = 245;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 246;
	                    this.operatorStrcat();
	                    this.state = 247;
	                    this.exp(5);
	                    break;
